# juliandates

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: test.yml
include/: juliandates.hpp
scripts/: create_weekday_testcase.py
src/: CMakeLists.txt  juliandates.cpp
tests/: CMakeLists.txt  dates_2020_2070.txt  test_weekday.cpp  test_weekday_bulk.cpp
